kube-resource/nginx-ingress-reference.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ab-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /a
            backend:
              serviceName: a-svc
              servicePort: 80
          - path: /b
            backend:
              serviceName: b-svc
              servicePort: 80
